2009-03-02  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	Make the app_killer interface usable again.

	* src/launcher/hd-app-mgr.c (hd_app_mgr_dbus_name_owner_changed):
	  Listen for new registrations too.
	  Request for the PID of the launched application's service
	  when we see its NameOwnerChanged.  Getting it right after
	  launch fails because the service is not registered at that time.
	* src/mb/hd-comp-mgr.h
	* src/mb/hd-comp-mgr.c (hd_comp_mgr_kill_all_apps):
	  Renamed from hd_comp_mgr_hibernate_all().
	  Reverts change from r35805 and use HdAppMgr again
	  to enumerate running applications.
	  Fixes a crash when hd_comp_mgr_hibernate_client() tried to
	  hibernate the desktop client, which doesn't have a ClutterClient.
	* src/util/hd-dbus.c:
	  Update.

2009-03-10  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Release 2.2.23

2009-03-10  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/hildon-desktop-views.schemas: By default views 1, 2, 3 are
	displayed. Fixes: NB#93980
	* debian/changelog: Update.

2009-03-09  Thomas Thurman  <thomas.thurman@collabora.co.uk>

	Fixes: NB#103602

	* src/mb/hd-dialog.c: when a dialogue opens, remove all
	open menus.

2009-03-07  Thomas Thurman  <thomas.thurman@collabora.co.uk>

        Fixes: NB#100141
	
	* src/mb/hd-comp-mgr.c: app->leader->followers can be null,
	so check before we dereference it.

2009-03-05  Thomas Thurman  <thomas.thurman@collabora.co.uk>

	* src/home/hd-switcher.c: remove debug statements accidentally checked
	in in previous commit.

2009-03-05  Thomas Thurman  <thomas.thurman@collabora.co.uk>

	Fixes: NB#96780
	and its duplicates NB#104206 and NB#104320.
	Does not yet fix NB#104037 which appears not to be identical.
	
	* src/home/hd-render-manager.c: unconditionally raise apps
	in the order the WM believes they're in, when switching to them.

2009-03-05  Marc Ordinas i Llopis  <marc.ordinasillopis@collabora.co.uk>

	Stop trying to prestart apps if they fail.
	Fixes: NB#99791
